--- a/WirelessRFID/WirelessRFID/config.json
+++ b/WirelessRFID/WirelessRFID/config.json
@@ -1,9 +1,10 @@
 ﻿{
   "IPAddressServer": "http://192.168.1.210",
   "API_GetTypeGate": "/epass2018/ws/parking_members/init",
-  "API_CheckDataExistInDB": "/epass2018/ws/parking_ins/check_member_valid",
+  "API_CheckMemberValidParkingOut": "/epass2018/ws/parking_ins/check_member_data",
   "API_SaveDataIn": "/epass2018/ws/parking_ins/member_in",
-  "API_SaveDataOut": "test",
+  "API_SaveDataOut": "/epass2018/ws/parking_outs/uid_member_out",
+  "API_CheckMemberValidParkingIn": "/epass2018/ws/parking_ins/check_member_valid",
   "IPAddressUHFDevice": "192.168.1.200",
   "IPCamera": "http://192.168.1.121",
   "WebCamUsage": true
